Fixed changing line break spacing

--- a/phasmorando/style.css
+++ b/phasmorando/style.css
@@ -47,6 +47,7 @@ body {
 
 .item, #whiteboard {
     font-family: "Tekton Pro";
+	display: block;
 }
 
 .non-essential {
